Fixed username being too close to right side of border

--- a/src/components/user/user.css
+++ b/src/components/user/user.css
@@ -22,7 +22,7 @@
     display: table-cell;
     font-size: 3rem;
     height: 80px;
-    padding-left: 10px;
+    padding: 0 15px 0 10px;
     vertical-align: middle;
 }
 #user-links {
